wip: checkpoint dynamic ministry administration